<resources>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="app_name_eulo">EULO</string>
    <string name="btn_create_wallet">Create Wallet</string>
    <string name="btn_restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_message">Select a backup of the wallet\nfrom a storage unit</string>
    <string name="pincode_message">For your security \na pincode is needed</string>
    <string name="select_file">Select File</string>
    <string name="action_qr">QR Cocde</string>
    <string name="action_add">Add Contact</string>
    <string name="string_password">Password</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_amount">Write amount to send</string>
    <string name="set_amount_piv">ULO</string>
    <string name="set_amount_usd">USD</string>
    <string name="add_all">ADD ALL</string>
    <string name="title_amount">Amount</string>
    <string name="title_address">Address</string>
    <string name="title_name">Name</string>
    <string name="title_description">Description</string>
    <string name="title_receiver_name">Receiver\'s name</string>
    <string name="title_date">Date</string>
    <string name="set_address">Write address or label name</string>
    <string name="add_address">Write address or label name</string>
    <string name="set_name">Add name</string>
    <string name="set_description">Add a description</string>
    <string name="btn_send">Send</string>
    <string name="btn_request">Request</string>
    <string name="payment_request">Payment Request</string>
    <string name="settings_subtitle_security">Security</string>
    <string name="backup_wallet_message">Your backup will be encrypted with\nthe password you choose and saved\nto an external storage drive.</string>
    <string name="settings_subtitle_preference">Preference</string>
    <string name="settings_subtitle_about">About</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="backup_wallet">Backup wallet</string>
    <string name="change_pincode">Change PIN code</string>
    <string name="local_currency">Local Currency</string>
    <string name="local_currency_usd">USD</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add_name">Add a name</string>
    <string name="scan_camera_problem_dialog_title">Sorry</string>
    <string name="scan_camera_problem_dialog_message">The camera has a problem. You probably need to restart the device.</string>
    <string name="scan_camera_permission_dialog_title">Camera permission</string>
    <string name="scan_camera_permission_dialog_message">In order to scan QR codes, you need to grant permission to use the camera.</string>
    <string name="scan_result_title">Scanner result</string>
    <string name="scan_result_address_title">Address detected</string>
    <string name="node_selection_message">You can select one of the node available or add one </string>
    <string name="select_node">Select Node</string>
    <string name="select">Select a Node</string>
    <string name="text_version">Version</string>
    <string name="text_versionName">versionName</string>
    <string name="network_monitor">Network monitor</string>
    <string name="settings_report">Report issue</string>
    <string name="send_message">Transaction details:</string>
    <string name="save_message">Do you want to save the address?</string>
    <string name="confirm">Confirm</string>
    <string name="action_scan">scanner</string>
    <string name="btn_select_node">Add node</string>
    <string name="node_default">Default values</string>
    <string name="title_no_trusted_peer_connection">Peer issue</string>
    <string name="message_no_trusted_peer_connection">Trusted peer connection fail</string>
    <string name="share_address_text">Share address</string>
    <string name="error_sending_coins">Send coins fail</string>
    <string name="ssl_port">SSL port</string>
    <string name="hint_ssl_port">Default SSL port</string>
    <string name="host">Host</string>
    <string name="hint_host">Add a Host</string>
    <string name="tcp_port">TCP port</string>
    <string name="hint_tcp_port">Default TCP port</string>
    <string name="add_memo">Monthly payment</string>
    <string name="backup_create">Create Backup</string>
    <string name="transaction_hash">Transaction ID</string>
    <string name="explorer">Explorer</string>
    <string name="backup_passwords_doesnt_match">Passwords doesn\'t match, please enter password again.</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_completed_text">Congratulations! Your wallet is backup is complete.\nIt has been saved in the folder at\n%s </string>
    <string name="import_keys_dialog_message">Select one of your backups\nfiles loaded from\nfolder %s</string>
    <string name="backup_restore">Restore</string>
    <string name="import_export_keys_dialog_failure_title">Restore wallet fail</string>
    <string name="import_keys_dialog_failure">Error importing backup file\n%s</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_retry">Retry</string>
    <string name="restore_wallet_dialog_success">Wallet was restored</string>
    <string name="restore_wallet_dialog_success_replay">Your wallet was successfully restored. Its balance will be determined next. This will take some time.</string>
    <string name="unavailable">Amount unspendable:</string>
    <string name="sending_tx">Sending transaction..</string>
    <string name="currency_message">Select your the local currency \n of your choice</string>
    <string name="title_fee">Fee</string>
    <string name="title_currency">Local Currency</string>
    <string name="title_pivx_send">Amount send</string>
    <string name="empty_message_address">You don\'t have any saved address yet.</string>
    <string name="error_message">There seems to been an error\nwith your transaction</string>
    <string name="settings_change_trusted_node">Change trusted node</string>
    <string name="settings_reset_blockchain">Reset blockchain</string>
    <string name="save">Save</string>
    <string name="tutorial_message"> Private, Instant, Verified, Transaction\nis a privacy-focused, decentralized, open source cryptocurrency run by a global community comprised of creators, innovators, and technology enthusiasts.</string>
    <string name="next_words">Next 4 words</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="restore">Restore</string>
    <string name="start">Start</string>
    <string name="title_slide1">Eulo is secure</string>
    <string name="desc_slide1">First code with BIP38 Encryption and Decryption of Private Keys</string>
    <string name="title_slide2">60 SECOND BLOCK TIME</string>
    <string name="desc_slide2">Already very fast, EULO transactions using SwiftX are instant with ZERO confirmation wait time required.</string>
    <string name="title_slide3">Extremely secure and private</string>
    <string name="desc_slide3">EULO is aiming it’s sights on establishing the first truly anonymous crypto-currency.</string>
    <string name="title_slide4">Trusted nodes federation</string>
    <string name="desc_slide4">Trusted nodes federation make light PoS wallets possible, you can rely on them or create your own trusted node!</string>
    <string name="option_add_node">Add node</string>
    <string name="report_issue_dialog_description">Issue description</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_db_data">Append databases data</string>
    <string name="report_issue_dialog_report">Report</string>
    <string name="button_cancel">Cancel</string>
    <string name="report_issue_dialog_mail_intent_chooser">Send report using…</string>
    <string name="report_issue_dialog_mail_intent_failed">Sending report failed.</string>
    <string name="report_issue_dialog_message_issue">Please describe your issue precisely enough to be reproduced.</string>
    <string name="report_issuea_dialog_title">Report issue</string>
    <string name="invalid_inputs">Invalid inputs</string>
    <string name="send_error_dialog_tag">send error dialog tag</string>
    <string name="restore_dialog_tag">restore dialog tag</string>
    <string name="restore_dialog_error">restore dialog error</string>
    <string name="settings_support">Support</string>
    <string name="support_subject">EULO wallet support</string>
    <string name="tutorial">Tutorial</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="copy_message">Address copied to the clipboard</string>
    <string name="security_message">Please write this in a safe place and in horizontal order, you\'ll need them to restore your wallet.\n\nDon\'t share this words to anybody. Be careful, whoever has this words is the owner of the coins!</string>
    <string name="security_message_confirmation">You have to confirm in the next screen</string>
    <string name="confirmation_message">Verify your security words</string>
    <string name="order_message_confirmation">Choose the words in the right order</string>
    <string name="backup_words">Mnemonic Code</string>
    <string name="btn_secure">Already noted</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="pincode_saved">New pin saved</string>
    <string name="insert_old_pin">Insert your current PIN</string>
    <string name="insert_new_pin">Insert new PIN</string>
    <string name="invalid_pincode">Invalid PIN</string>
    <string name="contact_already_exist">Contact address already exist</string>
    <string name="invalid_input_address">Invalid address</string>
    <string name="per_kilobyte">Per kilobyte</string>
    <string name="total_at_least">Total at least</string>
    <string name="fee">Fee</string>
    <string name="minimum_fee">Pay only the minimum fee of 0.00010000 Piv/kB</string>
    <string name="tx_detail_amount">Total amount</string>
    <string name="tx_detail_inputs_title">Source coins</string>
    <string name="tx_detail_inputs">%d inputs</string>
    <string name="txt_detail_confirmations">Confirmations amount</string>
    <string name="tx_detail_addresses">Outputs</string>
    <string name="fee_explanation">If the custom fee is lower than the minimum fee (0.0001 PIV/kB) the cost will be the minimum and not the custom fee selected.\n Fee calculated per kilobyte.</string>
    <string name="title_tx_weight">Weight</string>
</resources>