<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radio_per_kb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/per_kilobyte"
            android:textColor="@color/mainText" />

        <RadioButton
            android:id="@+id/radio_total_at_least"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/total_at_least"
            android:textColor="@color/mainText" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_fee_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/fee_explanation"
        android:textColor="#757575"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="6dp"
        android:text="@string/fee"
        android:textColor="#757575"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/transaction_inputs"
            android:gravity="center"
            android:hint="0.0000001"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:minWidth="150dp"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:textColor="@color/mainText"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/edit_fee"
            android:paddingTop="7dp"
            android:text="ULO/kB"
            android:textSize="20sp" />

    </LinearLayout>


    <CheckBox
        android:id="@+id/check_pay_minimum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/minimum_fee"
        android:textColor="@color/mainText" />


</LinearLayout>